Mon Mar 28 07:58:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Callback_Quoter/Consumer_Signal_Handler.h:
        * examples/Callback_Quoter/Notifier_i.h:
        * examples/Callback_Quoter/Supplier_i.h:
        * examples/Logging/Logging_Test_i.h:
        * examples/OBV/Simple_util.h:
        * examples/Persistent_Grid/Persistent_Client.h:
        * examples/Persistent_Grid/Simple_util.h:
        * examples/Quoter/Factory_Finder.h:
        * examples/Quoter/Factory_Finder_i.h:
        * examples/Quoter/client.h:
        * examples/Quoter/server.h:
        * interop-tests/wchar/wchar_reference.h:
        * performance-tests/Cubit/TAO/IDL_Cubit/Cubit_i.h:
        * performance-tests/POA/Demux/demux_test_client.h:
        * performance-tests/POA/Demux/demux_test_macros.h:
        * performance-tests/POA/Demux/demux_test_server.h:
        * tests/Alt_Mapping/ub_string.h:
        * tests/Bug_3683_Regression/Simple_util.h:
        * tests/Collocation/Collocation_Tester.h:
        * tests/DSI_AMI_Gateway/test_dsi.h:
        * tests/Exposed_Policies/Policy_Tester.h:
        * tests/Param_Test/ub_string.h:
          Fuzz fixes

Mon Mar 28 07:27:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        Converted files below to use doxygen style documentation

        * TAO_IDL/be/be_visitor_array/array_ci.cpp:

        * TAO_IDL/be/be_visitor_exception/any_op_cs.cpp:

        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ci.cpp:

        * TAO_IDL/be/be_visitor_root/root.cpp:

        * TAO_IDL/be/be_visitor_sequence/cdr_op_cs.cpp:

        * TAO_IDL/be_include/be_helper.h:

        * TAO_IDL/be_include/be_visitor_argument/invoke_cs.h:

        * TAO_IDL/be_include/be_visitor_exception/ctor.h:
        * TAO_IDL/be_include/be_visitor_exception/ctor_assign.h:
        * TAO_IDL/be_include/be_visitor_exception/exception_ctor.h:

        * TAO_IDL/include/utl_idlist.h:
