@@ -5,8 +5,6 @@
  *
  *  $Id$
  *
- *  @brief 
- *
  *  @author Pradeep Gore <pradeep@cs.wustl.edu>
  */
 //=============================================================================
